--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,12 @@
         android:layout_height="wrap_content"
         android:text="show XML"
         />
+    <Button
+        android:id="@+id/show_warpper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="show warpper"
+        />
   </LinearLayout>
 
 </ScrollView>
